# trenches

./: .dockerignore  .env.example  .gitignore  BACKEND_SUMMARY.md  DATA.md  Dockerfile  Dockerfile.frontend  ENTITIES.md  FINE_TUNING_STEPS.md  FLOW.md  HANDOFF.md  IMPROVEMENTS.md  MERMAID.md  PLAN.md  PRESENTATION.md  README.md  RL.md  TODO.md  TOOLS.md  TRAINING_PLAN.md  components.json  docker-compose.yml  frontend.md  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json
backend/: Dockerfile  HOW_POST_TRAINING_WORKS.md  OPENENV_DIAGRAM.md  POST_TRAINING_DATA_FLOW.md  POST_TRAINING_PLAN.md  README.md  TRAINING_FLOW.md  TRAINING_RUNBOOK.md  pyproject.toml  serve_modal.py  train_modal.py
backend/examples/: trl_openenv_colab_minimal.py
backend/src/trenches_env/: __init__.py  agents.py  benchmark_runner.py  entity_knowledge.py  env.py  historical_collection.py  historical_collection_cli.py  historical_replay.py  ingest_hf_2025_events.py  model_runtime.py  models.py  openenv_adapter.py  openenv_client.py  provider_runtime.py  rl.py  scenarios.py  self_hosted_config.py  server.py  session_manager.py  source_bundles.py  source_catalog.py  source_ingestion.py  source_manifest.json  source_monitor.py  training_cli.py  training_server.py
backend/src/trenches_openenv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/tests/: test_benchmark_runner.py  test_historical_collection.py  test_live_source_accessibility.py  test_live_source_delivery.py  test_mock_bindings.py  test_openenv_adapter.py  test_provider_runtime.py  test_reward_differentiation.py  test_server.py  test_session_manager.py  test_source_bundles.py  test_source_harvester.py  test_source_monitor.py  test_training_cli.py  test_training_server.py
backend/tmp-real-smoke-us/: tokenizer.json
backend/tmp-real-smoke-us-reuse/: config.json  model.safetensors  tokenizer_config.json
backend/tmp-real-smoke-us-v2/: generation_config.json  model.safetensors
backend/tmp-training-run/: README.md
backend/tmp-training-run/checkpoint-1/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
(+107 files in other folders)
