[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trenches-openenv"
version = "0.1.0"
description = "Python scaffolding for the Trenches OpenEnv crisis simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "numpy>=1.26.0,<3.0.0",
  "openenv-core[core]>=0.2.1,<0.3.0",
  "pydantic>=2.8.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]
train = [
  "accelerate>=1.0.0,<2.0.0",
  "bitsandbytes>=0.43.0",
  "datasets>=3.0.0,<4.0.0",
  "peft>=0.12.0,<1.0.0",
  "transformers>=4.55.0,<5.0.0",
  "trl>=0.25.0,<0.26.0",
]

[project.scripts]
trenches-api = "trenches_env.server:run"
trenches-train = "trenches_env.training_cli:main"
trenches-build-historical-replay = "trenches_env.historical_collection_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trenches_env = ["source_manifest.json", "historical_replays/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
